--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   },
   "devDependencies": {
     "browserify-middleware": "~2.4.0",
-    "less-middleware": "~0.2.1-beta",
+    "less-middleware": "~1.0.4",
     "grunt": "~0.4.4",
     "browserify": "~3.38.0",
     "grunt-contrib-copy": "~0.5.0",
